kubernetes/zookeeper/zookeeper-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kafka-to-zookeeper
spec:
  podSelector:
    matchLabels:
      app: kafka
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: zookeeper
      ports:
        - protocol: TCP
          port: 2181
